--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,32 @@ services:
       POSTGRES_USER: db_user
       POSTGRES_PASSWORD: db_password
       POSTGRES_DB: 'bot' 
+    depends_on: 
+      - chrome
     volumes:
       - devdb:/var/lib/postgresql/data
+  
+  selenium-hub:
+    restart: always
+    image: selenium/hub:3.14.0
+    container_name: selenium-hub
+    ports:
+      - "4444:4444"
+
+  chrome:
+    restart: always
+    image: selenium/node-chrome-debug:3.14.0
+    ports:
+      - "5900-5999:5900"
+    depends_on:
+      - selenium-hub
+    environment:
+      HUB_HOST: selenium-hub
+      HUB_PORT_4444_TCP_ADDR: selenium-hub
+      HUB_PORT_4444_TCP_PORT: 4444
+      DBUS_SESSION_BUS_ADDRESS: "/dev/null"
+    links:
+      - selenium-hub:hub
 
 volumes:
   devdb:
