--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,3 +52,32 @@ services:
 volumes:
   devdb:
   static:
+
+##################
+# hub:
+#   image: selenium/hub
+#   ports:
+#     - "4444:4444"
+# firefox:
+#   image: selenium/node-firefox
+#   links:
+#     - hub
+# chrome:
+#   image: selenium/node-chrome
+#   links:
+#     - hub
+#############
+  # selenium-hub:
+  #   image: selenium/hub:3.141.59-zirconium
+  #   container_name: selenium-hub
+  #   ports:
+  #     - "4444:4444"
+  # chrome:
+  #   image: selenium/node-chrome:3.141.59-zirconium
+  #   volumes:
+  #     - /dev/shm:/dev/shm
+  #   depends_on:
+  #     - selenium-hub
+  #   environment:
+  #     - HUB_HOST=selenium-hub
+  #     - HUB_PORT=4444
